# OpenImuCameraCalibrator

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Readme.md  requirements.txt
applications/: CMakeLists.txt  calibrate_camera.cc  continuous_time_imu_to_camera_calibration.cc  continuous_time_imu_to_camera_calibration_new.cc  create_charuco_board.cc  create_imu_camera_charuco.cc  estimate_camera_poses_from_checkerboard.cc  estimate_imu_to_camera_rotation.cc  extract_board_to_json.cc  fit_allan_variance.cc  static_imu_calibration.cc  test_spline_landmark_xyz.cc
docs/: compare_to_kalibr.md  gopro_calibration.md  imu_intrinsics.md  imu_noise_parameters.md  samsung_s20_calibration.md
include/CameraCalibrator/imu/: imu_utils.h
include/CameraCalibrator/spline/entity/paramstore/: dynamic_pstore.h  paramstore.h  pointer_pstore.h
include/CameraCalibrator/spline/kontiki/: constants.h  types.h
include/CameraCalibrator/spline/kontiki/measurements/: lifting_rscamera_measurement.h  newton_rscamera_measurement.h  position_measurement.h  static_rscamera_measurement.h
include/CameraCalibrator/spline/kontiki/sensors/: atan_camera.h  basic_imu.h  pinhole_camera.h
include/CameraCalibrator/spline/kontiki/sfm/: landmark.h  landmark_impl.h  observation.h  sfm.h  view.h
include/CameraCalibrator/spline/kontiki/trajectories/: uniform_se3_spline_trajectory.h
include/OpenCameraCalibrator/allanvariance/: allan_acc.h  allan_gyr.h  fitallan_acc.h  fitallan_gyr.h
include/OpenCameraCalibrator/basalt_spline/: assert.h  calib_bias.h  calib_helpers.h  ceres_calib_se3_residuals.h  ceres_calib_spline_se3.h  ceres_calib_spline_split.h  ceres_calib_split_residuals.h  ceres_calibration_spline_se3.h  ceres_lie_residuals.h  ceres_lie_spline.h  ceres_local_param.h  ceres_rs_calib_spline_split.h  ceres_spline_helper.h  ceres_spline_helper_old.h  common_types.h  eigen_utils.h  rd_spline.h  se3_spline.h  so3_spline.h  sophus_utils.h  spline_common.h
include/OpenCameraCalibrator/core/: allan_variance_fitter.h  board_extractor.h  camera_calibrator.h  imu_camera_calibrator.h  imu_to_camera_rotation_estimator.h  pose_estimator.h  spline_trajectory_estimator.h  spline_trajectory_estimator.impl.h  static_imu_calibrator.h
include/OpenCameraCalibrator/filter/: estimate_camera_imu_alignment.h  kalmanRTS.h
include/OpenCameraCalibrator/imu/: align_camera_imu.h  attitude_estimator.h  comp_filter.h  read_gopro_imu_json.h
include/OpenCameraCalibrator/io/: read_camera_calibration.h  read_gopro_imu_json.h  read_misc.h  read_scene.h  read_telemetry.h  write_camera_calibration.h
include/OpenCameraCalibrator/spline/: constants.h  entity.h  trajectory_estimator.h  types.h
include/OpenCameraCalibrator/spline/entity/: entity.h
include/OpenCameraCalibrator/spline/entity/paramstore/: empty_pstore.h
include/OpenCameraCalibrator/spline/kontiki/: trajectory_estimator.h
include/OpenCameraCalibrator/spline/kontiki/measurements/: accelerometer_measurement.h  gyroscope_measurement.h  orientation_measurement.h
include/OpenCameraCalibrator/spline/kontiki/sensors/: camera.h  (+3 more)
include/OpenCameraCalibrator/spline/math/: quaternion_math.h
include/OpenCameraCalibrator/spline/measurements/: accelerometer_measurement.h  gyroscope_measurement.h  lifting_rscamera_measurement.h  newton_rscamera_measurement.h  orientation_measurement.h  position_measurement.h  static_rscamera_measurement.h  static_rscamera_measurement_xyz.h
include/OpenCameraCalibrator/spline/paramstore/: dynamic_pstore.h  empty_pstore.h  pointer_pstore.h
include/OpenCameraCalibrator/spline/sensors/: atan_camera.h  basic_imu.h  camera.h  constant_bias_imu.h  division_undistortion_camera.h  imu.h  pinhole_camera.h  sensors.h
include/OpenCameraCalibrator/spline/sfm/: landmark_impl.h  landmark_xyz.h  landmark_xyz_impl.h  observation_impl.h  observation_xyz.h  observation_xyz_impl.h  sfm.h  view_impl.h  view_xyz.h  view_xyz_impl.h
include/OpenCameraCalibrator/spline/trajectories/: spline_base.h  split_trajectory.h  trajectory.h  uniform_r3_spline_trajectory.h  uniform_se3_spline_trajectory.h  uniform_so3_spline_trajectory.h
include/OpenCameraCalibrator/utils/: board_extractor.h  gyro_integration.h  imu_data_interval.h  intrinsic_initializer.h  json.h  moving_average.h  point_refinement.h  splinterp.h  types.h  utils.h
include/OpenCameraCalibrator/viz/: spline_visualizer.h
javascript/: README.md  data_recorder.html  data_recorder.js  extract_metadata.js  package-lock.json  package.json
javascript/helpers/: mp4reader.js
python/: allan_variance.py  board_extractor.py  debug_calib.py  double_integration.py  evaluate_cori_and_iori_quats.py  extract_for_kalibr_bagcreator.py  extract_frames_from_video.py  extract_telemetry_from_folder.py  get_imu_biases.py  get_sew_for_dataset.py  merge_gopro_telemetry_from_folder.py  print_result_stats.py  run_calibrate_ortho_camera.py  run_gopro_calibration.py  run_gopro_calibration_kontiki_spline.py  run_mynteye_calibration.py  run_ortho_cam_calibration.py  run_pygpmf_extraction.py  run_smartphone_calibration.py  run_zed_calibration.py  sew.py  static_multipose_imu_calibration.py  telemetry_converter.py  test_js_datarecorder.py  utils.py
resource/: charuco_detector_params.yml  kalibr_apriltag.yaml
scripts/: calibrate_gopro9_apriltag.sh  calibrate_gopro9_kalibr.sh
src/allanvariance/: allan_acc.cc  allan_gyr.cc  fitallan_acc.cc  fitallan_gyr.cc
src/core/: allan_variance_fitter.cc  board_extractor.cc  camera_calibrator.cc  imu_camera_calibrator.cc  imu_to_camera_rotation_estimator.cc  pose_estimator.cc  static_imu_calibrator.cc
src/filter/: estimate_camera_imu_alignment.cc  estimate_camera_imu_alignment_test.cc  kalmanRTS.cc  kalmanRTS_test.cc
src/imu/: attitude_estimator.cc  attitude_estimator_test.cc  comp_filter.cc  read_gopro_imu_json.cc
src/io/: read_camera_calibration.cc  read_gopro_imu_json.cc  read_misc.cc  read_scene.cc  read_telemetry.cc  write_camera_calibration.cc
src/utils/: board_extractor.cc  imu_data_interval.cc  intrinsic_initializer.cc  utils.cc
src/viz/: spline_visualizer.cc
(+7 files in other folders)
